chassis/tests/failing/module_multiple_same_provider.stderr
error: custom attribute panicked
 --> $DIR/module_multiple_same_provider.rs:5:1
  |
5 | #[integration]
  | ^^^^^^^^^^^^^^
  |
  = help: message: Already implementation existing
